ADD email verfication

--- a/src/mails/verify-email.ejs
+++ b/src/mails/verify-email.ejs
@@ -9,12 +9,16 @@
     <p>Hii
         <%= name %>
     </p>
+    <p> We're happy to see you onboard !! 🙂</p>
     <p>
-        Someone requested a new password for your MeTrack account.</p>
+        Please verify your email by clicking on this link !</p>
     <div>
         <a class="btn" href=<%=link %>>
-            Reset your password
+            verify email
         </a>
     </div>
-    <p> If you didn’t make this request, then you can ignore this email 🙂</p>
+    <p>
+        This message was intended for
+        <%=email %>
+    </p>
 </body>
